# fast-dep

./: .gitignore  Cargo.toml  LICENSE.md  README.md  fast_dep.pyi  pyproject.toml
.github/workflows/: CI.yml
benchmarking/: bench_fastdep.py  bench_modulegraph.py  bench_pydeps.py  bench_python_read.py  file_list_size.py  generate_file_list.py  requirements.txt  time_all.sh  util.py
fast-dep-meta/: Cargo.toml
fast-dep-meta/src/: lib.rs
notebooks/: string_parsing.ipynb  test.ipynb  test_graph.ipynb  test_parser.ipynb  with_profiling.ipynb
notebooks/res/: self_reference.py  very_simple.py
notes/: NOTES.md  linker_error.txt
notes/ast/: README.md
pytests/: TODO.md  test_graph.py  test_parser.py
pytests/res/: bunch_of_imports.py  import_easy.py  import_hard.py  import_wtf.py  not_imports.py
pytests/res/test_packages/: imports.py
pytests/res/test_packages/module_dep/: __init__.py  file.py
pytests/test_graph/: test_bunch.py  test_graph.py
src/: lib.rs
src/core/: builder.rs  mod.rs  types.rs
src/importlib/: mod.rs  types.rs  util.rs
src/minimal_parser/: grammar.pest  mod.rs  parser.rs  types.rs  util.rs
src/types/: ast.rs  imprtlib.rs  mod.rs
tests/: test_parser.rs
tests/res/: edge_cases.py  should_fail.py  test.py
