[package]
name = "fast-dep"
version = "0.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.19"
pest = "2.7.2"
pest_derive = "2.7.2"
pyo3 = ">=0.13.0"
pyo3-log = "0.8.3"
# fast-dep-meta = { path = "fast-dep-meta", version = "0.0.1" }
regex = "1.9.1"

[lib]
name = "fast_dep"
path = "src/lib.rs"
crate-type = ["cdylib", "lib"]

[[bin]]
name = "fast-dep"
path = "src/bin/bin.rs"

[features]
extension-module = ["pyo3/extension-module"]

[[tool.maturin.targets]]
name = "fast_dep"
kind = "lib"

[[tool.maturin.targets]]
name = "fast-dep"
kind = "bin"
