[build-system]
requires = ["maturin>=1.1,<2.0"]
build-backend = "maturin"

[project]
name = "fast_dep"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[[tool.maturin.targets]]
name = "fast_dep"
kind = "lib"

[[tool.maturin.targets]]
name = "fast-dep"
kind = "bin"